--- a/anaylsexp2/analyse.Rmd
+++ b/anaylsexp2/analyse.Rmd
@@ -21,6 +21,7 @@ output: html_document
 #install.packages("ggplot2")
 #install.packages("hexbin")
 #install.packages("data.table")
+#install.packages("psych")
 require(ggplot2)
 require(data.table)
 ```
@@ -246,58 +247,178 @@ barplot(table(DTForm$similaire), xlab="Expérience", ylab="Nombre de personnes", 
 ####Q2: Questionnaire sur les caractéristiques
 
 ```{r echo=FALSE}
-barplot(table(DTForm$agency1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez gardé le contrôle sur les événements de la partie",las=2)
-barplot(table(DTForm$agency2), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé suivre un parcours prédéterminé",las=2)
-barplot(table(DTForm$agency3), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous n'avez pas réussi à atteindre vos objectifs",las=2)
-barplot(table(DTForm$coherence1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez ressenti de la frustration face aux événements",las=2)
-barplot(table(DTForm$coherence2), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Les événements de la partie vous ont parus incompréhensible",las=2)
-barplot(table(DTForm$coherence3), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé chaotique",las=2)
-barplot(table(DTForm$incertitude1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été surpris par les événements",las=2)
-barplot(table(DTForm$incertitude2), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous saviez ce qui allait se passer avant que cela ne se passe",las=2)
-barplot(table(DTForm$incertitude3), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez eu peur de ne pas réussir à accomplir ce que vous vouliez",las=2)
-barplot(table(DTForm$espace1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez trouvé la partie riche et variée",las=2)
-barplot(table(DTForm$espace2), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes ennuyé durant la partie",las=2)
-barplot(table(DTForm$espace3), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez manqué de choses à voir ou à faire",las=2)
+barplot(table(DTForm$agency1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez gardé le contrôle sur les événements de la partie",las=2)
+summary(DTForm$agency1 + 1)
+wilcox.test(DTForm$agency1 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$agency2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé suivre un parcours prédéterminé",las=2)
+summary(DTForm$agency2 + 1)
+wilcox.test(DTForm$agency2 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$agency3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous n'avez pas réussi à atteindre vos objectifs",las=2)
+summary(DTForm$agency3 + 1)
+wilcox.test(DTForm$agency3 + 1, mu = 3, alternative = "less")
+
+psych::alpha(cbind(DTForm$agency1 + 1, DTForm$agency2 + 1, DTForm$agency3 + 1), keys = c(1, -1, -1))
+
+
+barplot(table(DTForm$coherence1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez ressenti de la frustration face aux événements",las=2)
+summary(DTForm$coherence1 + 1)
+wilcox.test(DTForm$coherence1 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$coherence2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Les événements de la partie vous ont parus incompréhensible",las=2)
+summary(DTForm$coherence2 + 1)
+wilcox.test(DTForm$coherence2 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$coherence3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="La partie vous a semblé chaotique",las=2)
+summary(DTForm$coherence3 + 1)
+wilcox.test(DTForm$coherence3 + 1, mu = 3, alternative = "greater")
+
+psych::alpha(cbind(DTForm$coherence1 + 1, DTForm$coherence2 + 1, DTForm$coherence3 + 1), keys = c(-1, -1, -1))
+
+
+barplot(table(DTForm$incertitude1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été surpris par les événements",las=2)
+summary(DTForm$incertitude1 + 1)
+wilcox.test(DTForm$incertitude1 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$incertitude2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous saviez ce qui allait se passer avant que cela ne se passe",las=2)
+summary(DTForm$incertitude2 + 1)
+wilcox.test(DTForm$incertitude2 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$incertitude3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez eu peur de ne pas réussir à accomplir ce que vous vouliez",las=2)
+summary(DTForm$incertitude3 + 1)
+wilcox.test(DTForm$incertitude3 + 1, mu = 3, alternative = "greater")
+
+psych::alpha(cbind(DTForm$incertitude1 + 1, DTForm$incertitude2 + 1, DTForm$incertitutde3 + 1), keys = c(1, -1, -1))
+
+
+barplot(table(DTForm$espace1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez trouvé la partie riche et variée",las=2)
+summary(DTForm$espace1 + 1)
+
+barplot(table(DTForm$espace2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes ennuyé durant la partie",las=2)
+summary(DTForm$espace2 + 1)
+wilcox.test(DTForm$espace2 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$espace3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez manqué de choses à voir ou à faire",las=2)
+summary(DTForm$espace3 + 1)
+wilcox.test(DTForm$espace3 + 1, mu = 3, alternative = "less")
+
+psych::alpha(cbind(DTForm$espace1 + 1, DTForm$espace2 + 1, DTForm$espace3 + 1), keys = c(1, -1, -1))
 
 ```
 
 ####Q3: Questionnaire narratif
 
 ```{r echo=FALSE}
-barplot(table(DTForm$narratif1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous pouviez vous voir à la place du personnage que vous contrôliez",las=2)
-barplot(table(DTForm$narratif2), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous avez pensé à ce qui se passait autour de vous dans la pièce",las=2)
-barplot(table(DTForm$narratif3), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous étiez occupé par les événements qui s'y déroulaient",las=2)
-barplot(table(DTForm$narratif4), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après que la partie se soit terminée il était facile de l'oublier",las=2)
-barplot(table(DTForm$narratif5), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vouliez continuer à jouer pour connaître la suite des événements",las=2)
-barplot(table(DTForm$narratif6), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été marqué par les événements de la partie",las=2)
-barplot(table(DTForm$narratif7), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé aux événements et aux décisions qui auraient pu changer votre partie",las=2)
-barplot(table(DTForm$narratif8), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé à autre chose qu\'à la partie durant celle-ci",las=2)
-barplot(table(DTForm$narratif9), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un objet",las=2)
-barplot(table(DTForm$narratif10), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un lieu",las=2)
-barplot(table(DTForm$narratif11), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un personnage du jeu",las=2)
+barplot(table(DTForm$narratif1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous pouviez vous voir à la place du personnage que vous contrôliez",las=2)
+summary(DTForm$narratif1 + 1)
+wilcox.test(DTForm$narratif1 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$narratif2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous avez pensé à ce qui se passait autour de vous dans la pièce",las=2)
+summary(DTForm$narratif2 + 1)
+wilcox.test(DTForm$narratif2 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$narratif3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Durant la partie vous étiez occupé par les événements qui s'y déroulaient",las=2)
+summary(DTForm$narratif3 + 1)
+wilcox.test(DTForm$narratif3 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$narratif4 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après que la partie se soit terminée il était facile de l'oublier",las=2)
+summary(DTForm$narratif4 + 1)
+wilcox.test(DTForm$narratif4 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$narratif5 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vouliez continuer à jouer pour connaître la suite des événements",las=2)
+summary(DTForm$narratif5 + 1)
+wilcox.test(DTForm$narratif5 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$narratif6 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez été marqué par les événements de la partie",las=2)
+summary(DTForm$narratif6 + 1)
+wilcox.test(DTForm$narratif6 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$narratif7 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé aux événements et aux décisions qui auraient pu changer votre partie",las=2)
+summary(DTForm$narratif7 + 1)
+wilcox.test(DTForm$narratif7 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$narratif8 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez pensé à autre chose qu\'à la partie durant celle-ci",las=2)
+summary(DTForm$narratif8 + 1)
+wilcox.test(DTForm$narratif8 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$narratif9 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un objet",las=2)
+summary(DTForm$narratif9 + 1)
+wilcox.test(DTForm$narratif9 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$narratif10 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un lieu",las=2)
+summary(DTForm$narratif10 + 1)
+wilcox.test(DTForm$narratif10 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$narratif11 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez développé un attachement particulier pour un personnage du jeu",las=2)
+summary(DTForm$narratif11 + 1)
+wilcox.test(DTForm$narratif11 + 1, mu = 3, alternative = "greater")
 ```
 
 ####Q4: Questionnaire sur les processus
 
 ```{r echo=FALSE}
-barplot(table(DTForm$processus1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Compagnon",las=2)
-barplot(table(DTForm$processus2), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Roi des lapins",las=2)
-barplot(table(DTForm$processus3), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Les autres",las=2)
-barplot(table(DTForm$processus4), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le compagnon lorsqu'il n'était pas devant vous",las=2)
-barplot(table(DTForm$processus5), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le roi des lapins lorsqu'il n'était pas devant vous",las=2)
-barplot(table(DTForm$processus6), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait les autres lorsqu'ils n'étaient pas devant vous",las=2)
-barplot(table(DTForm$processus7), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Compagnon",las=2)
-barplot(table(DTForm$processus8), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Roi des lapins",las=2)
-barplot(table(DTForm$processus9), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Les autres",las=2)
-barplot(table(DTForm$processus10), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Compagnon il était difficile de se souvenir ce que j'étais en train de faire",las=2)
-barplot(table(DTForm$processus11), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Roi des lapins il était difficile de se souvenir ce que j'étais en train de faire",las=2)
-barplot(table(DTForm$processus12), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Les autres il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+barplot(table(DTForm$processus1 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Compagnon",las=2)
+summary(DTForm$processus1 + 1)
+wilcox.test(DTForm$processus1 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus2 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Roi des lapins",las=2)
+summary(DTForm$processus2 + 1)
+wilcox.test(DTForm$processus2 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus3 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez cherché à comprendre le pouvoir Les autres",las=2)
+summary(DTForm$processus3 + 1)
+wilcox.test(DTForm$processus3 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus4 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le compagnon lorsqu'il n'était pas devant vous",las=2)
+summary(DTForm$processus4 + 1)
+wilcox.test(DTForm$processus4 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus5 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait le roi des lapins lorsqu'il n'était pas devant vous",las=2)
+summary(DTForm$processus5 + 1)
+wilcox.test(DTForm$processus5 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus6 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous vous êtes demandé où se trouvait les autres lorsqu'ils n'étaient pas devant vous",las=2)
+summary(DTForm$processus6 + 1)
+wilcox.test(DTForm$processus6 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus7 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Compagnon",las=2)
+summary(DTForm$processus7 + 1)
+wilcox.test(DTForm$processus7 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus8 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Roi des lapins",las=2)
+summary(DTForm$processus8 + 1)
+wilcox.test(DTForm$processus8 + 1, mu = 3, alternative = "two.sided")
+
+barplot(table(DTForm$processus9 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous avez une idée précise du pouvoir Les autres",las=2)
+summary(DTForm$processus9 + 1)
+wilcox.test(DTForm$processus9 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$processus10 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Compagnon il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+summary(DTForm$processus10 + 1)
+wilcox.test(DTForm$processus10 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$processus11 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Roi des lapins il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+summary(DTForm$processus11 + 1)
+wilcox.test(DTForm$processus11 + 1, mu = 3, alternative = "greater")
+
+barplot(table(DTForm$processus12 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Après l'utilisation du pouvoir Les autres il était difficile de se souvenir ce que j'étais en train de faire",las=2)
+summary(DTForm$processus12 + 1)
+wilcox.test(DTForm$processus12 + 1, mu = 3, alternative = "greater")
 
 ## TODO prefere et pourquoi
 
-barplot(table(DTForm$processus15), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
-barplot(table(DTForm$processus16), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Roi des lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
-barplot(table(DTForm$processus17), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+barplot(table(DTForm$processus15 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+summary(DTForm$processus15 + 1)
+wilcox.test(DTForm$processus15 + 1, mu = 3, alternative = "less")
+
+barplot(table(DTForm$processus16 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Roi des lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+summary(DTForm$processus16 + 1)
+wilcox.test(DTForm$processus16 + 1, mu = 3, alternative = "two.sided")
+
+barplot(table(DTForm$processus17 + 1), xlab="Tout à fait d'accord, d'accord, ni en désaccord ni d'accord, pas d'accord, pas du tout d'accord", ylab="Nombre de personnes", main="Vous utiliseriez le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft",las=2)
+summary(DTForm$processus17 + 1)
+wilcox.test(DTForm$processus17 + 1, mu = 3, alternative = "greater")
 
 ```
 
